intel/bench_214/extr_.tenginemodulesngx_http_tfs_modulengx_http_tfs_peer_connection.c_ngx_http_tfs_select_peer_v2_with_main/log.txt
bench_214/extr_.tenginemodulesngx_http_tfs_modulengx_http_tfs_peer_connection.c_ngx_http_tfs_select_peer_v2_with_main/extr_.tenginemodulesngx_http_tfs_modulengx_http_tfs_peer_connection.c_ngx_http_tfs_select_peer_v2_with_main.c:156:32: error: assigning to 'int *' from incompatible type 'void *'
            t->retry_handler = ngx_http_tfs_retry_ns;
                               ^~~~~~~~~~~~~~~~~~~~~
bench_214/extr_.tenginemodulesngx_http_tfs_modulengx_http_tfs_peer_connection.c_ngx_http_tfs_select_peer_v2_with_main/extr_.tenginemodulesngx_http_tfs_modulengx_http_tfs_peer_connection.c_ngx_http_tfs_select_peer_v2_with_main.c:163:32: error: assigning to 'int *' from incompatible type 'void *'
            t->retry_handler = ngx_http_tfs_retry_ds;
                               ^~~~~~~~~~~~~~~~~~~~~
bench_214/extr_.tenginemodulesngx_http_tfs_modulengx_http_tfs_peer_connection.c_ngx_http_tfs_select_peer_v2_with_main/extr_.tenginemodulesngx_http_tfs_modulengx_http_tfs_peer_connection.c_ngx_http_tfs_select_peer_v2_with_main.c:203:32: error: assigning to 'int *' from incompatible type 'void *'
            t->retry_handler = ngx_http_tfs_retry_ns;
                               ^~~~~~~~~~~~~~~~~~~~~
bench_214/extr_.tenginemodulesngx_http_tfs_modulengx_http_tfs_peer_connection.c_ngx_http_tfs_select_peer_v2_with_main/extr_.tenginemodulesngx_http_tfs_modulengx_http_tfs_peer_connection.c_ngx_http_tfs_select_peer_v2_with_main.c:213:32: error: assigning to 'int *' from incompatible type 'void *'
            t->retry_handler = ngx_http_tfs_retry_ds;
                               ^~~~~~~~~~~~~~~~~~~~~
4 errors generated.
HLS FPGA Parse FAILED.
